@@ -1,0 +1,9 @@
+pub gethibit(a)
+  return a.[31]
+  
+pub gethibits(a)
+  return a.[31..30]
+
+pub getbit(a, n)
+  return a.[n]
+
